BuildHughes/translation-tool/inputs/source_meta/objects/Common_TableComponent__c.object
<CustomObject>
    <fields>
        <fullName>ActionButtons__c</fullName>
        <label>ActionButtons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Search_Criteria__c</fullName>
        <label>Advanced Search Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Search_Help_Text__c</fullName>
        <label>Advanced Search Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColumnHeaderList__c</fullName>
        <label>ColumnHeaderList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Columns_To_Sort__c</fullName>
        <label>Columns To Sort</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Filter_Values_New__c</fullName>
        <label>Date Filter Values</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>LAST_90_DAYS</fullName>
                    <label>Last 90 days</label>
                </value>
                <value>
                    <fullName>LAST_MONTH</fullName>
                    <label>Last Month</label>
                </value>
                <value>
                    <fullName>LAST_QUARTER</fullName>
                    <label>Last Quarter</label>
                </value>
                <value>
                    <fullName>LAST_WEEK</fullName>
                    <label>Last Week</label>
                </value>
                <value>
                    <fullName>LAST_YEAR</fullName>
                    <label>Last Year</label>
                </value>
                <value>
                    <fullName>THIS_MONTH</fullName>
                    <label>This Month</label>
                </value>
                <value>
                    <fullName>THIS_QUARTER</fullName>
                    <label>This Quarter</label>
                </value>
                <value>
                    <fullName>THIS_WEEK</fullName>
                    <label>This Week</label>
                </value>
                <value>
                    <fullName>THIS_YEAR</fullName>
                    <label>This Year</label>
                </value>
                <value>
                    <fullName>TODAY</fullName>
                    <label>Today</label>
                </value>
                <value>
                    <fullName>YESTERDAY</fullName>
                    <label>Yesterday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultView__c</fullName>
        <label>DefaultView</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Filter_Column__c</fullName>
        <label>Default Filter Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Advanced_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Advanced Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Date_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Date Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Sorting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sorting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header_Default_Value__c</fullName>
        <label>Header Default Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header_Spanish_Value__c</fullName>
        <label>Header Spanish Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActionColumnEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActionColumnEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_By_Clause__c</fullName>
        <label>Order By Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagination_Type__c</fullName>
        <label>Pagination Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Set Controller</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOQLQuery__c</fullName>
        <label>SOQLQuery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SearchFields__c</fullName>
        <label>SearchFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Help_Text__c</fullName>
        <label>Search Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <label>Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common TableComponent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Common TableComponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common TableComponents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>